testsuite/tests/properties/invalid_predicate/ok_one_passed_default_var.lkt
import common

class Example: BaseExample {
    @exported fun prop(): Entity[FooNode] = {
        val _ = Example.pred2%(node.var1, node.var2, true);
        node.as_bare_entity
    }
}
